<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="90dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp" app:layout_constraintVertical_bias="0.0" android:id="@+id/buttons"
            app:layout_constraintHorizontal_bias="1.0">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:gravity="center" android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/simplify" android:layout_weight="1"
                    android:text="@string/simplify"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/factor" android:layout_weight="1"
                    android:text="@string/factor"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/derive" android:layout_weight="1"
                    android:text="@string/derive"
            />

        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/integrate" android:layout_weight="1"
                    android:text="@string/integrate"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/zeros" android:layout_weight="1"
                    android:text="@string/zeros"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/findTangent" android:layout_weight="1"
                    android:text="@string/findTangent"
            />

        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/area" android:layout_weight="1"
                    android:text="@string/area"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/cosine" android:layout_weight="1"
                    android:text="@string/cosine"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/sine" android:layout_weight="1"
                    android:text="@string/sine"
            />

        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/tangent" android:layout_weight="1"
                    android:text="@string/tangent"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/inverseCosine" android:layout_weight="1"
                    android:text="@string/inverseCosine"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/inverseSine" android:layout_weight="1"
                    android:text="@string/inverseSine"
            />

        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/inverseTangent" android:layout_weight="1"
                    android:text="@string/inverseTangent"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/abs" android:layout_weight="1"
                    android:text="@string/abs"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/log" android:layout_weight="1"
                    android:text="@string/log"
            />

        </TableRow>
    </TableLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expression"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttons"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.247"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            android:hint="@string/expression"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/expression" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttons" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.437" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>